--- a/app/views/shared/_header.slim
+++ b/app/views/shared/_header.slim
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light
   a.navbar-brand href="#"
-    img.logo-image src="/assets/logo.png"
+    img.logo-image src="#{image_path('logo.png')}"
   button.navbar-toggler aria-controls="navbarSupportedContent" aria-expanded="false" aria-label=("Toggle navigation") data-target="#navbarSupportedContent" data-toggle="collapse" type="button" 
     span.navbar-toggler-icon
   #navbarSupportedContent.collapse.navbar-collapse
