Reupdate path of all images

--- a/app/views/application/index.slim
+++ b/app/views/application/index.slim
@@ -41,9 +41,9 @@
                 button.btn.red-background.w-100 Search
   .carousel-inner
     .carousel-item.active data-interval="1000" 
-      img.d-block.w-100 alt="..." src="/assets/1.jpg" /
+      img.d-block.w-100 alt="..." src="#{image_path('1.jpg')}" /
     .carousel-item data-interval="1000" 
-      img.d-block.w-100 alt="..." src="/assets/2.jpg"
+      img.d-block.w-100 alt="..." src="#{image_path('2.jpg')}"
 #page-content
   .container
     .row.mb-4
