--- a/app/views/restaurants/_card.slim
+++ b/app/views/restaurants/_card.slim
@@ -1,5 +1,5 @@
 .card.mb-3
-  img.card-img-top alt="..." src="/assets/restaurant.png"
+  img.card-img-top alt="..." src="#{image_path('restaurant.png')}"
   .card-body
     h5.card-title Benihana - San Diego
     p
