--- a/app/views/restaurants/_card_cuisines.slim
+++ b/app/views/restaurants/_card_cuisines.slim
@@ -1,3 +1,3 @@
 .cuisines-card.position-relative.mb-3
   span Best American Restaurants Around You 
-  img.w-100.rounded src="/assets/cuisines.png" alt="..."
+  img.w-100.rounded src="#{image_path('cuisines.png')}" alt="..."
