--- a/app/views/restaurants/_card.slim
+++ b/app/views/restaurants/_card.slim
@@ -1,7 +1,9 @@
 .card.mb-3
-  img.card-img-top alt="..." src="#{image_path('restaurant.png')}"
+  a href="#{restaurant_show_path}"
+    img.card-img-top alt="..." src="#{image_path('restaurant.png')}"
   .card-body
-    h5.card-title Benihana - San Diego
+    a href="#{restaurant_show_path}"
+      h5.card-title Benihana - San Diego
     p
       i.fas.fa-star.text-red
       i.fas.fa-star.text-red
