--- a/app/views/application/show.slim
+++ b/app/views/application/show.slim
@@ -1,1 +1,77 @@
-show.slim
+
+#restaurant-show
+  img.d-block.w-100 alt="..." src="#{image_path('show.png')}"
+  .container
+    .row.restaurant-details
+      .col-md-8.left-col.rounded
+        ul#show-tab.nav.nav-tabs role="tablist" 
+          li.nav-item
+            a#overview-tab.nav-link.active aria-controls="home" aria-selected="true" data-toggle="tab" href="#overview" role="tab" Overview
+        #myTabContent.tab-content
+          #overview.tab-pane.fade.show.active aria-labelledby="home-tab" role="tabpanel"
+            h2.my-4 Benihana - San Diego
+            .dropdown-divider.mb-3
+            p.mb-4
+              i.fas.fa-star.text-red
+              i.fas.fa-star.text-red
+              i.fas.fa-star.text-red
+              i.fas.fa-star.text-red
+              i.fas.fa-star-half-alt.text-red
+              span.ml-2 4.5
+              i.far.fa-comment-alt.ml-3
+              span.ml-2.text-muted 3070 reviews
+              i.fas.fa-money-bill.ml-3
+              span.ml-2 $30 and under
+              i.fas.fa-utensils.ml-3
+              span.ml-2 Japanese
+            p.mb-4
+              span.mr-3.text-monospace Top Tags:
+              span.rounded-pill.border.px-3.py-2.mr-2 Good For Party
+              span.rounded-pill.border.px-3.py-2.mr-2 Fun
+
+            p.mb-5.font-weight-light Welcome to Benihana and a dining experience unlike any other! Our guests are seated at communal tables in groups, where your personal chef will perform the ancient art of Teppanyaki. Watch as we slice and dice, preparing a meal that will dazzle your eyes as well taste buds, whether you choose mouth-watering steak, tender chicken or succulent seafood. You can also enjoy sushi prepared by a talented sushi chef and indulge in a specialty cocktail. Benihana’s famous showman chefs are legendary in San Diego. The restaurant is located near hotel row off the 8 Freeway, exit Mission Center Drive. Visit our large sushi bar and lounge for Happy Hour each Monday through Friday from 4-7 p.m. with great specials starting at just $3.00. Benihana is near Mission Bay, SeaWorld, Balboa Park and the San Diego Zoo.
+
+            p.mb-4 
+              h4 72 Photos
+            .dropdown-divider.mb-3
+            img.d-block.w-100.mb-5 alt="..." src="#{image_path('gallery.png')}"
+
+             p.mb-4 
+              h4 What 3070 People Are Saying
+            .dropdown-divider.mb-3
+            - 4.times do |n|
+              = render partial: '/comments/card'
+            
+      .col-md-4.right-col
+        .card.w-100.border-0.reservation-card.shadow
+          .card-body
+            h5.card-title Make a reservation
+            .dropdown-divider.mb-3
+            p.mb-1.font-weight-bold Party Size
+            p 
+              select.custom-select.pl-0
+                option value="2" selected="" For 2
+                option value="4"  For 4
+                option value="8"  For 8
+            .row
+              .col-6
+                p.mb-1.font-weight-bold Date
+                p 
+                  select.custom-select.pl-0
+                    option value="2" selected="" Today
+                    option value="4"  Tomorrow
+                    option value="8"  Next week
+              .col-6
+                p.mb-1.font-weight-bold Time
+                p 
+                  select.custom-select.pl-0
+                    option value="2" selected="" 8:00 AM
+                    option value="4"  10:00 AM
+                    option value="8"  12:00 AM
+
+            p
+              button.red-background.w-100.py-3 type="button" Find a Table 
+            p
+              i.fas.fa-chart-line.mr-2
+              span Booked 77 times today
+
