--- a/app/views/shared/_header.slim
+++ b/app/views/shared/_header.slim
@@ -1,5 +1,5 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light
-  a.navbar-brand href="#"
+  a.navbar-brand href="#{root_path}"
     img.logo-image src="#{image_path('logo.png')}"
   button.navbar-toggler aria-controls="navbarSupportedContent" aria-expanded="false" aria-label=("Toggle navigation") data-target="#navbarSupportedContent" data-toggle="collapse" type="button" 
     span.navbar-toggler-icon
