--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,3 +94,39 @@ i.icon-left {
     }
   }
 }
+
+#show-tab {
+  a {
+    padding-left: 0;
+    padding-right: 0;
+    border: 0;
+    border-bottom: 2px solid #da3743;
+    color: #da3743;
+    text-align: left;
+  }
+}
+
+.comment-card {
+  .author-name {
+    margin: auto;
+    width: 55px;
+    height: 55px;
+    text-align: center;
+  }
+}
+
+.restaurant-details {
+  position: relative;
+  top: -40px;
+
+  .left-col, .reservation-card {
+    background-color: white;
+  }
+
+  .custom-select {
+    border: 0;
+    border-bottom: 1px solid #d2d2d2;
+    border-radius: 0;
+  }
+}
+
