--- a/app/views/comments/_card.slim
+++ b/app/views/comments/_card.slim
@@ -1,11 +1,11 @@
 .card.mb-3.border-0.comment-card
   .row.no-gutters
-    .col-md-3.text-center.d-flex.align-items-center.justify-content-center
+    .col-md-2.text-center.d-flex.align-items-start.justify-content-center.pt-4
       p
         span.rounded-circle.p-3.bg-secondary.text-white.author-name.d-block.mb-2 JO
         span.mb-2.d-block JohnO
         span.text-muted.d-block San Diego
-    .col-md-9
+    .col-md-10
       .card-body
         p
           i.fas.fa-star.text-red
@@ -23,5 +23,5 @@
           span.text-red 5 
           span Ambience 
           span.text-red 5
-        p.text-muted.mb-4.font-weight-light Best place in San Diego to celebrate Birthdays and Holidays.
+        p.text-muted.mb-4.font-weight-light First time going and it was wonderful. The show was amazing, super entertaining, staff was so nice and considerate. I understand that restaurants need to take into account food allergies, but the staff was so sweet about it. They made sure to cook all other food before the ones we were allergic to and they had no problem explaining that to the other customers at our table. I even got a photo for my birthday! Great place and deliciois food. Totally reccomend it.
 .dropdown-divider
