--- a/app/views/application/index.slim
+++ b/app/views/application/index.slim
@@ -10,7 +10,7 @@
             form.row
               .col-md-6.mb-3
                 .row.m-0
-                  .form-wrap.col-4
+                  .form-wrap.col-4.border-0
                     .row
                       input.form-control.no-border.border-right.no-rounded.rounded-left type="text" placeholder="Feb 24th, 2019"
                       i.fas.fa-calendar-week.icon-left
@@ -59,7 +59,7 @@
       .col
         .d-flex.justify-content-between
           h3 Popular restaurants in San Diego
-          a.text-red  href="#" View All
+          a.text-red  href="#{restaurant_all_path}" View All
         .dropdown-divider
     .row.mb-4
       - 4.times do |n|
