--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -132,7 +132,7 @@ i.icon-left {
 
 #restaurant-index {
   .form-wrap-row {
-    background-image: url("bg.png");
+    background-image: image-url("bg.png");
   }
 }
 
